<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>br.com.gabxdev</groupId>
    <artifactId>rinha-backend-2025-java-gabxdev-undertow-unix</artifactId>
    <version>1.0.0</version>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <jib.maven-plugin.image>eclipse-temurin:21-jre</jib.maven-plugin.image>
        <jib-maven-plugin.version>3.4.5</jib-maven-plugin.version>
        <docker.repo.url>gabxdevv</docker.repo.url>
        <docker.repo.project>${project.artifactId}</docker.repo.project>
        <docker.image.name>${docker.repo.url}/${docker.repo.project}</docker.image.name>
        <undertow-core.version>2.3.18.Final</undertow-core.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>io.undertow</groupId>
            <artifactId>undertow-core</artifactId>
            <version>${undertow-core.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.graalvm.buildtools</groupId>
                <artifactId>native-maven-plugin</artifactId>
                <version>0.11.0</version>
            </plugin>

            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>3.5.4</version>
                <configuration>
                    <mainClass>br.com.gabxdev.RinhaBackend2025JavaApplication</mainClass>
                    <image>
                        <name>${docker.image.name}:${project.version}</name>
                        <builder>paketobuildpacks/builder-jammy-java-tiny:latest</builder>
                        <env>
                            <BP_NATIVE_IMAGE>true</BP_NATIVE_IMAGE>
                            <BP_JVM_VERSION>21</BP_JVM_VERSION>
                            <BP_NATIVE_IMAGE_BUILD_ARGUMENTS>
                                -H:IncludeResources=".*"
                                -march=skylake
                                --native-compiler-options=-march=skylake
                                --native-compiler-options=-mtune=skylake
                                --no-fallback
                                -O3
                                --gc=serial
                                --no-server
                            </BP_NATIVE_IMAGE_BUILD_ARGUMENTS>
                        </env>
                    </image>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>





